fix: location align center

--- a/src/styles/components/_social_links_profile.scss
+++ b/src/styles/components/_social_links_profile.scss
@@ -27,6 +27,7 @@
 }
 .social-links-profile--header--location {
   color: var(--green);
+  text-align: center;
 }
 
 .social-links-profile--description {
